--- a/src/assets/emerald/styles/theme.css
+++ b/src/assets/emerald/styles/theme.css
@@ -24,3 +24,10 @@
 .eme-content-light {
   background-color: var(--eme-color-white-3);
 }
+
+.eme-footer-light {
+  background-color: var(--eme-color-light);
+}
+.eme-footer-dark {
+  background-color: var(--eme-color-dark);
+}
