--- a/src/assets/emerald/styles/base.css
+++ b/src/assets/emerald/styles/base.css
@@ -19,10 +19,10 @@ html {
   box-sizing: border-box;
 }
 
-body {
+/* body {
   position: relative;
   min-height: 100vh;
-}
+} */
 
 /* Default settings */
 h1 {
@@ -51,7 +51,7 @@ a {
 
 footer {
   background-color: black;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
+  /* position: absolute;
+  bottom: 0; */
+  /* width: 100%; */
 }
